<resources>
    <string name="app_name">MiniProject1</string>
    <string name="title_activity_main2">Product list</string>
    <string name="title_activity_options">Options</string>
    <string name="product_list">Product list</string>
    <string name="options">Options</string>
    <string name="small">small</string>
    <string name="normal">normal</string>
    <string name="large">large</string>
    <string name="font_size">Font size</string>
    <string name="defaultName">TextView</string>
    <string name="deleteProductTitle">Are you sure you want to delete this product?</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="product_name">i.e. bread</string>
    <string name="_10_0">i.e. 10.0</string>
    <string name="_10">i.e. 10</string>
    <string name="add_product">add product</string>
    <string name="night_mode">Night Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="individual">Individual</string>
    <string name="shared">Shared</string>
    <string name="list_mode">List mode</string>
    <string name="logout">Logout</string>
    <string name="shops_map">Shops map</string>
    <item name="fab" type="id" />
    <string name="title_activity_shops_map">Map</string>
    <string name="title_activity_upsert_shop">UpsertShopActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="description">Description</string>
    <string name="radius">Radius</string>
    <string name="i_e_10">i.e. 10</string>
    <string name="title_activity_shop_list">ShopListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>