<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/cardbackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fontSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font_size"
                android:textColor="?attr/textcolor"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group">
                <RadioButton android:id="@+id/small_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    android:text="@string/small"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/normal_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    android:text="@string/normal"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/large_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    android:text="@string/large"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/cardbackground"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <com.google.android.material.textview.MaterialTextView
                android:textStyle="bold"
                android:textColor="?attr/textcolor"
                android:text="@string/enable_dark_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_comp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/night_mode"
                android:textColor="?attr/textcolor"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="?attr/cardbackground"
        android:layout_marginTop="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/listMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_mode"
                android:textColor="?attr/textcolor"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group_list">
                <RadioButton android:id="@+id/individual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    android:text="@string/individual"
                    android:onClick="onListRadioButtonClicked"/>
                <RadioButton android:id="@+id/shared"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/textcolor"
                    android:text="@string/shared"
                    android:onClick="onListRadioButtonClicked"/>
            </RadioGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <!--    <FrameLayout-->
    <!--        android:id="@+id/settings"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent" />-->
</LinearLayout>