<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="?attr/backgroundcolor">

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:backgroundTint="?attr/buttoncolor"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hintcolor"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="380dp"
        android:backgroundTint="?attr/buttoncolor"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/hintcolor"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="256dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_register"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:backgroundTint="?attr/buttoncolor"
        android:textColor="?attr/textbutton" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="256dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:backgroundTint="?attr/buttoncolor"
        android:textColor="?attr/textbutton"/>
</androidx.constraintlayout.widget.ConstraintLayout>