<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ShopListActivity"
    android:background="?attr/backgroundcolor">


    <!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="374dp"-->
<!--        android:layout_height="280dp"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/recycler_view_shop"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_shop"
        android:layout_width="0dp"
        android:layout_height="356dp"
        android:layout_margin="40dp"
        android:background="?attr/backgroundcolor"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shops_list_button" />

    <TextView
        android:id="@+id/nameEditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textColor="?attr/textcolor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/nameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="test"
            android:backgroundTint="?attr/buttoncolor"
            android:hint="@string/product_name"
            android:inputType="textPersonName"
            android:labelFor="@+id/nameEdit"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/hintcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextView"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/descriptionEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="eggs"
            android:text="@string/description"
            android:textColor="?attr/textcolor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

        <EditText
            android:id="@+id/descriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="10.0"
            android:backgroundTint="?attr/buttoncolor"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            android:labelFor="@+id/priceEdit"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/hintcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextView"
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/radiusTextEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/radius"
            android:textColor="?attr/textcolor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEdit" />

        <EditText
            android:id="@+id/radiusEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="10"
            android:backgroundTint="?attr/buttoncolor"
            android:ems="10"
            android:hint="@string/_10"
            android:inputType="number"
            android:labelFor="@+id/quantityEdit"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/hintcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radiusTextEditView"
            tools:ignore="LabelFor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shops_list_button"
        android:layout_width="176dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:backgroundTint="?attr/buttoncolor"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="?attr/textbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiusEdit" />
    <!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>